--- a/print.html
+++ b/print.html
@@ -5,10 +5,7 @@
         <meta charset="UTF-8">
         <title>dots</title>
         <meta name="robots" content="noindex" />
-
-
         <!-- Custom HTML head -->
-        
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,11 +17,9 @@
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
         <link rel="stylesheet" href="css/print.css" media="print">
-
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="fonts/fonts.css">
-
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
         <link rel="stylesheet" href="tomorrow-night.css">
@@ -33,7 +28,6 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href=".\theme\catppuccin.css">
         <link rel="stylesheet" href=".\theme\catppuccin-highlight.css">
-
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -84,7 +78,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/msys.html"><strong aria-hidden="true">1.1.1.</strong> msys2</a></li><li class="chapter-item expanded "><a href="Windows/cpp/vc.html"><strong aria-hidden="true">1.1.2.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -92,7 +86,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                                <div id="menu-bar-hover-placeholder"></div>
+                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -123,7 +117,6 @@
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
-
                     </div>
                 </div>
 
@@ -137,7 +130,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
                 <script type="text/javascript">
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
@@ -166,7 +158,6 @@
 <ul>
 <li>gh</li>
 <li>ripgrep</li>
-<li>llvm</li>
 </ul>
 <h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
 <ul>
@@ -175,53 +166,19 @@
 <li>Giorgiotani.Peazip</li>
 <li>Kitware.CMake</li>
 <li>Microsoft.PowerToys</li>
-<li>TheDocumentFoundation.LibreOffice</li>
 <li>OpenJS.NodeJS</li>
 <li>Rustlang.Rustup</li>
 <li>SumatraPDF.SumatraPDF</li>
 <li>GnuWin32.Tar</li>
 <li>VLC media player</li>
-<li>Vivaldi</li>
 <li>OliverSchwendener.ueli</li>
 <li>JanDeDobbeleer.OhMyPosh</li>
 <li>Rainmeter.Rainmeter</li>
 <li>Microsoft.WindowsTerminal</li>
 <li>Git.Git</li>
-<li>Bitwarden.Bitwarden</li>
 <li>msys2.msys2</li>
 <li>Microsoft.VisualStudioCode</li>
-<li>Oracle.JDK.19</li>
-<li>HXAM</li>
 </ul>
-<h3 id="in-script"><a class="header" href="#in-script">In Script</a></h3>
-<pre><code class="language-powershell">winget install Google.Chrome
-winget install Google.Drive
-winget install Giorgiotani.Peazip
-winget install Kitware.CMake
-winget install Microsoft.PowerToys
-winget install TheDocumentFoundation.LibreOffice
-winget install OpenJS.NodeJS
-winget install Rustlang.Rustup
-winget install SumatraPDF.SumatraPDF
-winget install GnuWin32.Tar
-winget install VLC media player
-winget install Vivaldi
-winget install OliverSchwendener.ueli
-winget install JanDeDobbeleer.OhMyPosh
-winget install Rainmeter.Rainmeter
-winget install Microsoft.WindowsTerminal
-winget install Git.Git
-winget install Bitwarden.Bitwarden
-winget install msys2.msys2
-winget install Microsoft.VisualStudioCode
-winget install Oracle.JDK.19
-winget install HXAM
-</code></pre>
-</br>
-<pre><code class="language-shell">choco install gh
-choco install ripgrep
-choco install llvm
-</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="cpp"><a class="header" href="#cpp">CPP</a></h1>
 <p>Common CPP Dev Settings that i use.</p>
 <h2 id="microsoft-visual-studio"><a class="header" href="#microsoft-visual-studio">Microsoft Visual Studio</a></h2>
@@ -231,36 +188,6 @@ choco install llvm
 <li>Intermideates Dir: <code>$(SolutionDir)bin\intermideates\$(Platform)\$(Configuration)\</code></li>
 <li>Additional Include Directory: <code>$(SolutionDir)src\include,$(SolutionDir)include</code></li>
 </ol>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="visual-studio"><a class="header" href="#visual-studio">Visual Studio</a></h1>
-<p>Installations is simple. Just download the installer from <a href="https://visualstudio.microsoft.com/downloads/">here</a>.</p>
-<hr />
-<blockquote>
-<p><strong>Visual C++ Compiler stdc++=20</strong></p>
-</blockquote>
-<h2 id="installation-guide"><a class="header" href="#installation-guide">Installation guide</a></h2>
-<p>~ Install Visual Sudio</p>
-<p>~ Modify Installation</p>
-<p>~ Individual Components &gt; search <code>modules</code></p>
-<h2 id="activation"><a class="header" href="#activation">Activation</a></h2>
-<ul>
-<li>
-<p>Solution Properties &gt; Configuration Properties &gt; General: C++ Language Standard = &quot;Preview - Features from the Latest C++ Working Draft (/std:c++latest)&quot;</p>
-</li>
-<li>
-<p>Solution Properties &gt; C/C++ &gt; Language : Enable External C++ Standard Library Modules = &quot;Yes(/experimental:module)&quot;</p>
-</li>
-</ul>
-<h2 id="import-commands"><a class="header" href="#import-commands"><strong>import commands</strong></a></h2>
-<ul>
-<li>std.filesystem -&gt; <code>&lt;filesystem&gt;</code></li>
-<li>std.regex -&gt; <code>&lt;regex&gt;</code></li>
-<li>std.memory -&gt; <code>&lt;memory&gt;</code></li>
-<li>std.threading -&gt; <code>&lt;atomic&gt;, &lt;condition_variable&gt;, &lt;future&gt;, &lt;mutex&gt;, &lt;shared_mutex&gt; and &lt;thread&gt;</code></li>
-<li>std.core -&gt; Everything else in the Standard Library</li>
-</ul>
-<blockquote>
-<p>Note: -&gt; = Provides the contents of headers</p>
-</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="msys2"><a class="header" href="#msys2">MSYS2</a></h1>
 <p>MSYS2 should be installed via winget.</p>
 <p>In the event that it is not, it can be installed from <a href="https://www.msys2.org/">here</a>.</p>
@@ -697,42 +624,31 @@ code dotfiles
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-
                         <div style="clear: both"></div>
                     </nav>
                 </div>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
             </nav>
 
         </div>
 
-
-
-
         <script type="text/javascript">
             window.playground_copyable = true;
         </script>
-
-
         <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
-
         <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
         <script src="book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
-
         <script type="text/javascript">
         window.addEventListener('load', function() {
             window.setTimeout(window.print, 100);
         });
         </script>
-
     </body>
 </html>
